<resources>
    <string name="app_name">REX Water Level Control</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_act_consumo">actConsumo</string>
    <string name="title_activity_act_volume">actVolume</string>

    <string name="edt_name">Nome</string>
    <string name="edt_email">Email</string>
    <string name="edt_senha">Senha</string>
    <string name="edt_numSerie">Número de Série</string>
    <string name="btn_sair">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edt_mAltura">Altura do recipiente</string>
    <string name="edt_mLargura">Largura ou Raio</string>
    <string name="edt_mComprimento">Comprimento</string>

</resources>
