<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rex.rex_project_v03.frgLoginManual">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/blue_light"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">


            <ImageView android:src="@mipmap/icon_rex"
                android:layout_width="wrap_content"
                android:layout_height="104dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/edt_modoManual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="0dp"
                android:paddingTop="0dp"
                android:text="Modo de Operação manual escolhida, entre com os dados:"
                android:textColor="@color/write"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/edt_mRecipiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="0dp"
                android:paddingTop="0dp"
                android:text="Recipiente escolhido: "
                android:textColor="@color/write"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

            </android.support.design.widget.TextInputLayout>

            <!-- Altura Label -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edt_mAltura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/write"
                    android:hint="@string/edt_mAltura"
                    android:inputType="numberDecimal"
                    android:textColor="@color/write" />
            </android.support.design.widget.TextInputLayout>

            <!-- Largura Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edt_mLagura_Raio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/write"
                    android:hint="@string/edt_mLargura"
                    android:inputType="numberDecimal"
                    android:textColor="@color/write" />
            </android.support.design.widget.TextInputLayout>

            <!-- Altura Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edt_mComprimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/write"
                    android:hint="@string/edt_mComprimento"
                    android:inputType="numberDecimal"
                    android:textColor="@color/write" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_mEntrar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/blue_dark"
                android:padding="12dp"
                android:text="Entrar"
                android:textColor="@color/write" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

